--- a/nomadcoders/CloneZoom/src/views/home.pug
+++ b/nomadcoders/CloneZoom/src/views/home.pug
@@ -9,20 +9,11 @@ html(lang="en")
         header
             h1 Noom
         main
-            div#welcome
-                form
-                    input(placeholder="room name", required, type="text")
-                    button Enter Room
-                h4 Open Rooms:
-                ul 
-            div#room
-                h3
-                ul
-                form#name
-                    input(placeholder="nickname", required, type="text")
-                    button Save
-                form#msg
-                    input(placeholder="message", required, type="text")
-                    button Send
+            div#myStream
+                // playsinline을 추가하면 모바일 환경에서 자동으로 video가 전체화면으로 바뀌는 것을 막는다.
+                video#myFace(autoplay, playsinline, width="400", height="400")
+                button#mute Mute
+                button#camera Turn Camera Off
+                select#cameras
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js") 
