--- a/nomadcoders/CloneZoom/src/views/home.pug
+++ b/nomadcoders/CloneZoom/src/views/home.pug
@@ -9,11 +9,16 @@ html(lang="en")
         header
             h1 Noom
         main
-            div#myStream
-                // playsinline을 추가하면 모바일 환경에서 자동으로 video가 전체화면으로 바뀌는 것을 막는다.
-                video#myFace(autoplay, playsinline, width="400", height="400")
-                button#mute Mute
-                button#camera Turn Camera Off
-                select#cameras
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter room
+            div#call
+                div#myStream
+                    // playsinline을 추가하면 모바일 환경에서 자동으로 video가 전체화면으로 바뀌는 것을 막는다.
+                    video#myFace(autoplay, playsinline, width="400", height="400")
+                    button#mute Mute
+                    button#camera Turn Camera Off
+                    select#cameras
         script(src="/socket.io/socket.io.js") 
         script(src="/public/js/app.js") 
